Fix some formatting in TIP #466 (revised text), in particular escape special chars

--- a/tip/466.md
+++ b/tip/466.md
@@ -222,7 +222,7 @@ at <http://scidb.sourceforge.net/tk/revised-text-widget.html>
 
 	 > \* Additional optional parameter _direction_ for _pathName_ **mark set** sub-command
 
-	 > \* New virtual event **<<Altered>>** to support new sub-command
+	 > \* New virtual event **\<\<Altered\>\>** to support new sub-command
      _pathName_ **edit altered**
 
 	 > \* Extensions to commands _pathName_ **edit reset** and _pathName_
@@ -267,7 +267,7 @@ at <http://scidb.sourceforge.net/tk/revised-text-widget.html>
 
  * Problems fixed with tag event handling
 
- * Several bug fixes with **undo_
+ * Several bug fixes with **undo**
 
  * **Edit modified** confusing results fixed with new command
    **edit altered**
@@ -335,7 +335,7 @@ known:
    mouse hovering while the widget is scrolling. Setting the responsiveness to zero restores the old
    behavior of the text widget.
 
- * <<UndoStack>> is generated with any change on the undo stack, not only when
+ * **\<\<UndoStack\>\>** is generated with any change on the undo stack, not only when
    the undo stack or the redo stack becomes empty or non-empty
 
  * **-startline**/**-endline** behavior was subtly changed in some corner cases
