Add comment to TIP 198 documenting intention to reject.

--- a/tip/198.md
+++ b/tip/198.md
@@ -56,6 +56,14 @@ image format.  I'm quite baffled as to the need for a new
 image type.  Is this TIP better served by a request to
 promote XPM to the core set of supported formats?
 
+_2018-02-21_ This TIP is best considered to be 'abandoned'. The two
+queries above had been presented to the original author shortly after
+the TIP was introduced, and he never replied either to them or to a
+repeat status inquiry by email.  Our process doesn't really
+contemplate what to do when no TCT member agrees to sponsor a
+TIP. Accordingly, I'm going to exercise a peculiar parliamentary move
+and 'sponsor' it with an announced intention to vote NO.  --kbk
+
 # Copyright
 
 This document has been placed in the public domain.
