--- a/tip/502.md
+++ b/tip/502.md
@@ -26,7 +26,7 @@ of the C __int__ value __1__. Generally any supported formatting
 of any value between __-UINT\_MAX__ and __UINT\_MAX__ is accepted,
 but trasformed into a value between __INT\_MIN__ and __INT\_MAX__.
 Second, the internal routine/macro _TclGetIntForIndex\(M\)_
-encodes a definition of Tcl index values that any value acceptable
+implements a definition of Tcl index values where any value acceptable
 to _Tcl\_GetInt\(FromObj\)_ is also acceptable as an index of the
 same value.
 
