--- a/tip/502.md
+++ b/tip/502.md
@@ -28,7 +28,19 @@ but trasformed into a value between __INT\_MIN__ and __INT\_MAX__.
 Second, the internal routine/macro _TclGetIntForIndex\(M\)_
 implements a definition of Tcl index values where any value acceptable
 to _Tcl\_GetInt\(FromObj\)_ is also acceptable as an index of the
-same value.
+same value.  Both of these features are of questionable merit, but
+the first has a fair bit of compatibility constraint attached to it
+because it involves the behavior of public routines.  The second
+should be more open to potential revisions.
+
+Another source of possible surprise is demonstrated:
+
+	% lindex {a b} 4294967295
+	% lindex {a b} 4294967295+1
+	a
+	% lindex {a b} 4294967296
+	bad index "4294967296": must be integer?[+-]integer? or end?[+-]integer?
+
 
 # Proposal
 
