Belated advance of 351 and 475 to 'Voting'

--- a/tip/351.md
+++ b/tip/351.md
@@ -3,7 +3,7 @@
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	Author:         Harald Oehlmann <harald.oehlmann@elmicron.de>
 	Author:         Andreas Leitgeb <avl@logic.at>
-	State:          Draft
+	State:          Voting
 	Type:           Project
 	Vote:           Pending
 	Created:        09-Jul-2009
