--- a/tip/475.md
+++ b/tip/475.md
@@ -1,6 +1,6 @@
 # TIP 475: Add [string insert] Command and C API
     Author: Andy Goth (andrew.m.goth@gmail.com)
-    State: Draft
+    State: Voting
     Type: Project
     Vote: Pending
     Created: 22-Sep-2017
