Change 'Vote' to 'In progress' on 351 and 475

--- a/tip/351.md
+++ b/tip/351.md
@@ -5,7 +5,7 @@
 	Author:         Andreas Leitgeb <avl@logic.at>
 	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        09-Jul-2009
 	Post-History:   
 	Tcl-Version:    8.7
