--- a/tip/475.md
+++ b/tip/475.md
@@ -2,7 +2,7 @@
     Author: Andy Goth (andrew.m.goth@gmail.com)
     State: Voting
     Type: Project
-    Vote: Pending
+    Vote: In progress
     Created: 22-Sep-2017
     Post-History:
     Keywords: Tcl,string,insert
