--- a/tip/502.md
+++ b/tip/502.md
@@ -24,7 +24,7 @@ functionality. First, passing the value "-4294967295" to
 _Tcl\_GetInt\(FromObj\)_ results in a successful extraction
 of the C __int__ value __1__. Generally any supported formatting
 of any value between __-UINT\_MAX__ and __UINT\_MAX__ is accepted,
-but trasformed into a value between __INT\_MIN__ and __INT\_MAX__.
+but transformed into a value between __INT\_MIN__ and __INT\_MAX__.
 Second, the internal routine/macro _TclGetIntForIndex\(M\)_
 implements a definition of Tcl index values where any value acceptable
 to _Tcl\_GetInt\(FromObj\)_ is also acceptable as an index of the
