Vote completed on 351 and 475

--- a/tip/351.md
+++ b/tip/351.md
@@ -3,9 +3,9 @@
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	Author:         Harald Oehlmann <harald.oehlmann@elmicron.de>
 	Author:         Andreas Leitgeb <avl@logic.at>
-	State:          Voting
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        09-Jul-2009
 	Post-History:   
 	Tcl-Version:    8.7
