--- a/tip/475.md
+++ b/tip/475.md
@@ -1,8 +1,8 @@
 # TIP 475: Add [string insert] Command and C API
     Author: Andy Goth (andrew.m.goth@gmail.com)
-    State: Voting
+    State: Rejected
     Type: Project
-    Vote: In progress
+    Vote: Done
     Created: 22-Sep-2017
     Post-History:
     Keywords: Tcl,string,insert
