Vote commenced on 198, 462, 482, 483, 490, 499

--- a/tip/198.md
+++ b/tip/198.md
@@ -2,9 +2,9 @@
 	Author:         R. Timothy Edwards <tim@stravinsky.jhuapl.edu>
 	Author:         Don Porter <dgp@users.sf.net>
 	Author:         Kevin Kenny <kennykb@acm.org>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        12-May-2004
 	Post-History:   
 	Tcl-Version:    8.7
