--- a/tip/482.md
+++ b/tip/482.md
@@ -1,8 +1,8 @@
 # TIP 482: Record Tk demo directory information
 	Author:         Stuart Cassoff <stwo@users.sourceforge.net>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        03-Nov-2017
 	Post-History:   
 	Keywords:       Tk, demos, configuration
