--- a/tip/483.md
+++ b/tip/483.md
@@ -1,8 +1,8 @@
 # TIP 483: Improved TIP #59 implementation for Tk
 	Author:         Stuart Cassoff <stwo@users.sourceforge.net>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        03-Nov-2017
 	Post-History:   
 	Keywords:       Tk, configuration
