--- a/tip/499.md
+++ b/tip/499.md
@@ -1,8 +1,8 @@
 # TIP 499: Custom locale search list for msgcat
 	Author:         Harald Oehlmann <oehhar@sourceforge.com>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        07-Dec-2017
 	Post-History:
 	Keywords:       msgcat, oo
