--- a/tip/489.md
+++ b/tip/489.md
@@ -1,8 +1,8 @@
 # TIP 489: Add image widget command to the Tk canvas
 	Author:         Scott Pitcher <scottypitcher@gmail.com>
-	State:          Voting
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        02-Dec-2017
 	Post-History:
 	Keywords:       canvas, image
