New implementation branch.

--- a/tip/502.md
+++ b/tip/502.md
@@ -48,7 +48,7 @@ Another source of possible surprise is demonstrated:
 
 # Implementation
 
-Taking shape on the index-range-and-overflow branch.
+Taking shape on the tip-502 branch.
 
 # Copyright
 
