--- a/tip/503.md
+++ b/tip/503.md
@@ -34,8 +34,8 @@ vital importance to anyone.
 # Proposal
 
 Remove all directives that support source compatibility with pre-8.4
-versions of Tcl. This includes **NO_CONST**, **USE_NON_CONST**,
-**USE_COMPAT_CONST**, **CONST84**, **CONST84_RETURN**.
+versions of Tcl. This includes **NO\_CONST**, **USE\_NON\_CONST**,
+**USE\_COMPAT\_CONST**, **CONST84**, **CONST84\_RETURN**.
 
 # Compatibility
 
