Updated TIP #496 (-placeholder option) according to recent discussions on tcl-core

--- a/tip/496.md
+++ b/tip/496.md
@@ -1,4 +1,4 @@
-# TIP 496: Display hints in ::entry ::ttk::entry ::ttk::spinbox and ::ttk::combobox
+# TIP 496: Display hints in ::entry ::spinbox ::ttk::entry ::ttk::spinbox and ::ttk::combobox
 	Author:         René Zaumseil <rzaumseil@kkg.ch>
 	State:          Draft
 	Type:           Project
@@ -15,41 +15,31 @@ Entry fields should support the ability to display informational text when no te
 
 # Rationale
 
-Entry fields, p.e. search boxes in browsers, have the ability to display some help text inside if no real value is given.
+Entry fields, for instance search boxes in browsers, have the ability to display some help text inside if no real value is given.
 The text is with a lighter color and is removed if the user enters some real text.
 
-The **entry** and **ttk::entry ttk::spinbox ttk::combobox** commands can easily enhanced to provide this
-support, and there is no interference with existing code as this
-functionality can be done by just introducing new options.
+The **entry**,  **spinbox**, **ttk::entry**, **ttk::spinbox** and **ttk::combobox** commands can easily be enhanced to provide this support, and there is no interference with existing code as this functionality can be done by just introducing new options.
 
 # Specification
 
-A help text can be displayed on **entry** and **ttk::entry ttk::spinbox ttk::combobox** widgets if no text is otherwise displayed.
+A help text can be displayed on **entry**,  **spinbox**, **ttk::entry**, **ttk::spinbox** and **ttk::combobox** widgets if no text is otherwise displayed.
 To control the text appearance the following new options will be added:
 
  -placeholder: The string to display.
 
- -placeholderforeground: The color of the text. This is a normal option for **entry** and a style option for **ttk::entry**.
+ -placeholderforeground: The color of the text. This is a normal option for the Tk widgets and a style option for the Ttk widgets.
 
 If the -placeholder text is empty (the default value) then nothing is displayed.
 
 The -placeholderforeground has a default value of #b3b3b3 (gray70).
 
-The -placeholder text value is always displayed with current font and left justification.
-
-# Discussion
-
-- The naming of the options follows the naming on windows and macos.
-
-- The default value for the -placeholderforeground option needs to be specified?
-
-- Are -placeholderfont and -placeholderjustify options necessary?
+The -placeholder text value is always displayed with current font and justification.
 
 # Implementation
 
-A patch implementing these changes and updating the documentation is available.
+A patch implementing these changes is available in the fossil repository in the tip-496 branch.
 
-The patch is in the fossil repository in the tip-496 branch.
+Documentation updates not yet done.
 
 # Example of use
 
