Split out the discussion.

--- a/tip/490.md
+++ b/tip/490.md
@@ -40,78 +40,76 @@ namespace eval ::foo {
 package provide foo 1.0
 </pre>
 
-# Documentation
+# Key Use Cases
 
 There are 4 use-cases to consider (which may be intermixed in the same package):
 
-(with 'Servus!' as translation for 'Hi!')
+(with _'Servus!'_ as translation for _'Hi!'_)
 
-## Use-Case 1: the package does not use OO
+1. The package does not use OO
 
-<pre>
-namespace import msgcat::*
-namespace eval ::N1 {
-    mcload $dir/msgs
-    proc m1 {} {
-        puts [mc Hi!]
-    }
-}
+	<pre>
+	namespace import msgcat::*
+	namespace eval ::N1 {
+	    mcload $dir/msgs
+	    proc m1 {} {
+	        puts [mc Hi!]
+	    }
+	}
 
-% N1::m1
--> Servus!
-</pre>
+	% N1::m1
+	-> Servus!
+	</pre>
 
-## Use-case 2: msgcat is called within a class definition script
+2. msgcat is called within a class definition script
 
-<pre>
-% namespace import msgcat::*
-% namespace eval ::N2 {
-    mcload $dir/msgs
-    oo::class create C1 {puts [mc Hi!]}
-}
--> Servus!
-</pre>
+	<pre>
+	% namespace import msgcat::*
+	% namespace eval ::N2 {
+	    mcload $dir/msgs
+	    oo::class create C1 {puts [mc Hi!]}
+	}
+	-> Servus!
+	</pre>
 
-## Use-case 3: msgcat is called from a method in an object and the method is defined in a class
+3. msgcat is called from a method in an object and the method is defined in a class
 
-<pre>
-namespace import msgcat::*
-namespace eval ::N3Class {
-    mcload $dir/msgs
-    oo::class create C1
-    oo::define C1 method m1 {
-        puts [mc Hi!]
-    }
-}
+	<pre>
+	namespace import msgcat::*
+	namespace eval ::N3Class {
+	    mcload $dir/msgs
+	    oo::class create C1
+	    oo::define C1 method m1 {
+	        puts [mc Hi!]
+	    }
+	}
 
-# The class object may be used in another namespace
-namespace eval ::N3Obj {
-    set O1 [::N3Class::C1 new]
-}
+	# The class object may be used in another namespace
+	namespace eval ::N3Obj {
+	    set O1 [::N3Class::C1 new]
+	}
 
-% $N3Obj::O1 m1
--> Servus!
-</pre>
+	% $N3Obj::O1 m1
+	-> Servus!
+	</pre>
 
-## Use-case 4: msgcat is called from a method of a classless object
+4. msgcat is called from a method of a classless object
 
-<pre>
-namespace import msgcat::*
-namespace eval ::N4 {
-    mcload $dir/msgs
-    oo::object create O1
-    oo::objdefine O1 method m1 {} {
-        puts [mc Hi!]
-    }
-}
+	<pre>
+	namespace import msgcat::*
+	namespace eval ::N4 {
+	    mcload $dir/msgs
+	    oo::object create O1
+	    oo::objdefine O1 method m1 {} {
+	        puts [mc Hi!]
+	    }
+	}
 
-% N4::O1 m1
--> Servus!
-</pre>
+	% N4::O1 m1
+	-> Servus!
+	</pre>
 
-## Use-case 1 may be emulated in Use-case 2 to 4 using "namespace eval"
-
-Before this extension, a programmer for use-case 2 to 4 must have used "namespace eval" to explicitly specify the package namespace:
+Note that use-case 1 may emulate Use-cases 2 to 4 using `namespace eval`. Before this extension, a programmer for use-case 2 to 4 must have used `namespace eval` to explicitly specify the package namespace:
 
 <pre>
 namespace import msgcat::*
@@ -129,11 +127,12 @@ namespace eval ::N4 {
 
 This should still work with the new extension for compatibility reasons.
 
-# Usage
+# Proposal
 
-There are 4 proposed extensions to current msgcat 1.6.1:
+There are 4 possible proposed ways of extending msgcat to support
+this. _We intend to implement the first option._
 
-## Extension 1: Extend all msgcat commands to support all 4 use-cases.
+## Option 1: Extend all msgcat commands to support all 4 use-cases.
 
 So any **msgcat** command will detect the scenario on its own and extract the package namespace automatically.
 
@@ -142,11 +141,11 @@ The commands which are packet-namespace related are: **mc**, **mcexists**, **mcp
 This has the following advantages (compared to the alternatives):
 
 * no new commands, no learning
-* if another foreign procedure is called and the procedure wants to use the callers message catalog, it may just use "uplevel 1 {msgcat tag}" and does not need to know if it is a class or not.
+* if another foreign procedure is called and the procedure wants to use the callers message catalog, it may just use `uplevel 1 {msgcat tag}` and does not need to know if it is a class or not.
 
 Here is an example for the second advantage:
 
-The tklib package "tooltip" may invoke `msgcat::mc msg` for all textes to get eventual translations (it does something like that but I don't understand it, IMHO broken).
+The tklib package "tooltip" may invoke `msgcat::mc msg` for all text to get eventual translations (it does something like that but I don't understand it, IMHO broken).
 The package namespace of the caller should be used (not the one of the tooltip package).
 
 So:
@@ -159,7 +158,7 @@ proc ::tooltip::tooltip {widget message} {
 
 This will work in all use-cases, e.g. if `tooltip::tooltip` is called by a method following use-case 1 to 4.
 
-## Extension 2: new command to get package namespace
+## Option 2: new command to get package namespace
 
 The "magic" to extract the package namespace is exposed by the command:
 
@@ -258,10 +257,10 @@ namespace eval ::N4 {
 -> ::N5
 </pre>
 
-Remark, that in most real cases, one will explicitly specify "::N4" instead "::N5", as this is the package namespace.
-"::N5" was chosen in the example to show the fact, that the "namespace eval" overwrites any class-magic.
+Note that in most real cases, one will explicitly specify "`::N4`" instead "`::N5`", as this is the package namespace.
+"`::N5`" was chosen in the example to show the fact, that the `namespace eval` overrides any class-magic.
 
-## Extension 3: new command to get a translation with a package namespace as argument
+## Option 3: new command to get a translation with a package namespace as argument
 
 A new command is proposed to get a translation with an explicit namespace:
 <pre>
@@ -274,7 +273,7 @@ with the arguments:
 
 This command is identical to the `mc` command, with the difference, that the package namespace is not found by an implicit call to `mcpackagenamespaceget`, but may be explicitly specified as first argument
 
-Then, the mc command may be expressed like:
+Then, the `mc` command may be expressed like:
 <pre>
 mcn [mcpackagenamespaceget] src args...
 </pre>
@@ -305,7 +304,7 @@ proc ::tooltip::show {widget messagenamespace message} {
 </pre>
 
 
-## Extension 4: Command "mcexists" should get a parameter -namespace to explicitly specify the namespace
+## Option 4: Command "mcexists" should get a parameter -namespace to explicitly specify the namespace
 
 The command `mcexists` has currently the syntax:
 
@@ -313,7 +312,7 @@ The command `mcexists` has currently the syntax:
 mcexists ?-exactnamespace? ?-exactlocale? src
 </pre>
 
-A switch ?-namespace ns? is added to specify the namespace explicitly:
+A switch, **-namespace** _ns_, is added to specify the namespace explicitly:
 
 <pre>
 mcexists ?-exactnamespace? ?-exactlocale? ?-namespace ns? src
@@ -369,156 +368,12 @@ proc ::msgcat::PackageNamespaceGet {} {
 The implementation is in tcl fossil in branch
 [tip490-msgcat-oo-2](https://core.tcl.tk/tcl/timeline?r=tip490-msgcat-oo-2).
 
-There are tests but no man page changes jet.
+There are tests but no man page changes yet.
 Please use this text as man-page.
 
 # Discussion
 
-## Issue 1: are really all oo use-cases covered ?
-
-Gosts like multiple inheritance, mixins, filters whatever are calling...
-
-## Issue 2: All backward compatibility issues covered ?
-
-I see the following covered ones:
-
-* no oo -> `uplevel 1 namespace current` is used, o.k.
-* oo with explicit `namespace eval` -> o.k.
-
-Are there eventually other cases not discussed here?
-
-## Issue 3: performance loss
-
-There is a performance penalty due to the modification described in "implementation".
-
-To not decrease performance would require to introduce new commands, what I think is not good.
-We would loose the flexibility and backward compatibility to just insert a 3rd party package, which may call "uplevel 1 msgcat::mc tag", and it works.
-
-For performance enthusiasts, one may use "mcn", which may be little faste than former msgcat.
-
-## Issue 4: does not work for tcl 8.6
-
-The `self` command does not work for tcl 8.6 within class definition scripts.
-
-It returns the error message:
-
-<verb>
-wrong # args: should be "self arg ?arg ...?"
-</verb>
-
-# Alternatives
-
-## Use a mixin
-
-Proposed by Donal Fellows
-
-Each class which wants to use message catalogs require a call to `mixin msgcat::MessageCatalogAware`.
-
-Then, the following commands are available and correspond to the `msgcat::` commands:
-
-* my mc
-* my mcmax
-* my mcexists
-
-All other mc-commands are not available within classes and should be used outside of a class.
-
-# Examples
-
-Within the following example, the message catalog for the package is loaded outside the method definitions.
-
-A class "Foo" is created and the msgcat capabilities are activated by the mixin.
-
-Then, a method is defined, which uses the message catalog of the namespace.
-
-<pre>
-namespace eval ::foo {
-    msgcat::mcload $dir/msgs
-    oo::class create Foo {
-        mixin msgcat::MessageCatalogAware
-        method printMessage {x y} {
-            puts [my mc "FooPrintMessage(%d,%d)" $x $y]
-        }
-    }
-}
-package provide foo 1.0
-</pre>
-
-The implementation is in tcl fossil in branch
-[tip490-msgcat-oo](https://core.tcl.tk/tcl/timeline?r=tip490-msgcat-oo).
-
-## Use own commands for getting and setting message catalogues
-
-Eric Boudallier proposed a solution on [Wiki page "msgcat and TclOO"](http://wiki.tcl.tk/39430)
-
-There is also an addendum by Donal Fellows with an alternate implementation.
-
-## mixin solution where superclass and subclass may not be in different namespaces:
-
-Donal Fellows also provided this solution.
-
-The key then is how to make `msgcat::mc` work (and a few related commands as well). The trick I've thought of is to use the magic powers of `apply` and `tailcall`; here's what we're looking for:
-
-<pre>
-namespace eval ::foo {
-    msgcat::mcload $dir/msgs
-    oo::class create MessageCatalogAware {
-        forward mc apply {args {tailcall ::msgcat::mc {*}$args} ::foo}
-        unexport mc
-    }
-    oo::class create Foo {
-        mixin MessageCatalogAware
-        # ...
-    }
-    oo::class create Bar {
-        mixin MessageCatalogAware
-        # ...
-    }
-}
-package provide foo 1.0
-</pre>
-
-(I'd use a mixin for this; it's not really about the class itself; it's just about making a capability available.)
-
-It'd be nice to have a way to make that bridging class automatically. Here it is.
-
-<pre>
-oo::class create ::msgcat::oobridge {
-    superclass oo::class
-    self method create {name args} {
-        set cls [next $name {*}$args]
-        set ns ::[namespace qualifiers [namespace which $cls]]
-        foreach cmd {mc mcmax mcexists} {
-            oo::define $cls forward $cmd apply [list \
-                {cmd args} {tailcall $cmd {*}$args} $ns] \
-                ::msgcat::$cmd
-            oo::define $cls unexport $cmd
-        }
-        return $cls
-    }
-}
-</pre>
-
-Now our little package would become:
-
-<pre>
-namespace eval ::foo {
-    msgcat::mcload $dir/msgs
-    msgcat::oobridge create MessageCatalogAware
-    oo::class create Foo {
-        mixin MessageCatalogAware
-        # ...
-    }
-    oo::class create Bar {
-        mixin MessageCatalogAware
-        # ...
-    }
-}
-package provide foo 1.0
-</pre>
-
-Alternatively, we could plug the capabilities into `oo::define`; the principles of the code are largely the same but the details are little different.
-
-I've been thinking about this more, and I've realised that there is a subtle problem: a superclass and a subclass could be in different namespaces in different packages, and so could reasonably want to use different message catalogs. This means that the bridging code always needs to look up what the context namespace is at runtime, which in turn means that there's no need for clever class manufacturing, and it can all be done with (see section "Implementation" above).
+See [this page](490-discussion.md) for further discussion.
 
 # Credits
 
