More formatting tweaking

--- a/tip/490.md
+++ b/tip/490.md
@@ -1,4 +1,4 @@
-# TIP 490: msgcat for tcloo
+# TIP 490: msgcat for TclOO
 	Author:         Harald Oehlmann <oehhar@sourceforge.com>
 	State:          Voting
 	Type:           Project
@@ -190,60 +190,60 @@ proc ::tooltip::show {widget messagenamespace message} {
 
 Examples with the 4 use-cases:
 
-### Use-case 1: the package does not use OO
+1. First use case: the package does not use OO
 
-<pre>
-namespace eval ::N1 {
-    proc m1 {} {msgcat::mcpackagenamespaceget}
-}
+	<pre>
+	namespace eval ::N1 {
+	    proc m1 {} {msgcat::mcpackagenamespaceget}
+	}
 
-% N1::m1
--> ::N1
-</pre>
+	% N1::m1
+	-> ::N1
+	</pre>
 
-### Use-case 2: call within class definition script
+2. Second use case: call within class definition script
 
-<pre>
-% namespace eval ::N2Class {
-    oo::class create C1 {puts "pns=[msgcat::mcpackagenamespaceget]"}
-}
--> pns=::N2Class
--> ::N2Class::C1
-</pre>
+	<pre>
+	% namespace eval ::N2Class {
+	    oo::class create C1 {puts "pns=[msgcat::mcpackagenamespaceget]"}
+	}
+	-> pns=::N2Class
+	-> ::N2Class::C1
+	</pre>
 
-### Use-case 3: The package implementation is done by a class
+3. Third use case: The package implementation is done by a class
 
-<pre>
-namespace eval ::N3Class {
-    oo::class create C1
-    oo::define C1 method m1 {msgcat::mcpackagenamespaceget}
-}
+	<pre>
+	namespace eval ::N3Class {
+	    oo::class create C1
+	    oo::define C1 method m1 {msgcat::mcpackagenamespaceget}
+	}
 
-# The class object may be used in another namespace
+	# The class object may be used in another namespace
 
-namespace eval ::N3Obj {
-    set O1 [::N3Class::C1 new]
-}
+	namespace eval ::N3Obj {
+	    set O1 [::N3Class::C1 new]
+	}
 
-% $N3Obj::O1 m1
--> ::N3Class
-</pre>
+	% $N3Obj::O1 m1
+	-> ::N3Class
+	</pre>
 
-### Use-case 4: The package implementation is done by a classless object
+4. Fourth use case: The package implementation is done by a classless object
 
-<pre>
-namespace eval ::N4 {
-    oo::object create O1
-    oo::objdefine O1 method m1 {} {msgcat::mcpackagenamespaceget}
-}
+	<pre>
+	namespace eval ::N4 {
+	    oo::object create O1
+	    oo::objdefine O1 method m1 {} {msgcat::mcpackagenamespaceget}
+	}
 
-% N4::O1 m1
--> ::N4
-</pre>
+	% N4::O1 m1
+	-> ::N4
+	</pre>
 
-### Manually overwrite the package namespace by namespace eval
+### Manually overwriting the package namespace by namespace eval
 
-As stated in the introduction, current oo code might have used an explicit `namespace eval packagenamespace` to make msgcat work. This should still be supported:
+As stated in the introduction, current OO code might have used an explicit `namespace eval packagenamespace` to make msgcat work. This should still be supported:
 
 <pre>
 namespace eval ::N4 {
