tip490 oo for msgcat: re-changed "option" to "extension"

--- a/tip/490.md
+++ b/tip/490.md
@@ -129,10 +129,10 @@ This should still work with the new extension for compatibility reasons.
 
 # Proposal
 
-There are 4 possible proposed ways of extending msgcat to support
-this. _We intend to implement the first option._
+The following 4 extensions are proposed and covered by the TIP.
 
-## Option 1: Extend all msgcat commands to support all 4 use-cases.
+
+## Extension 1: Extend all msgcat commands to support all 4 use-cases.
 
 So any **msgcat** command will detect the scenario on its own and extract the package namespace automatically.
 
@@ -158,7 +158,7 @@ proc ::tooltip::tooltip {widget message} {
 
 This will work in all use-cases, e.g. if `tooltip::tooltip` is called by a method following use-case 1 to 4.
 
-## Option 2: new command to get package namespace
+## Extension 2: new command to get package namespace
 
 The "magic" to extract the package namespace is exposed by the command:
 
@@ -188,85 +188,17 @@ proc ::tooltip::show {widget messagenamespace message} {
 }
 </pre>
 
-Examples with the 4 use-cases:
 
-1. First use case: the package does not use OO
-
-	<pre>
-	namespace eval ::N1 {
-	    proc m1 {} {msgcat::mcpackagenamespaceget}
-	}
-
-	% N1::m1
-	-> ::N1
-	</pre>
-
-2. Second use case: call within class definition script
-
-	<pre>
-	% namespace eval ::N2Class {
-	    oo::class create C1 {puts "pns=[msgcat::mcpackagenamespaceget]"}
-	}
-	-> pns=::N2Class
-	-> ::N2Class::C1
-	</pre>
-
-3. Third use case: The package implementation is done by a class
-
-	<pre>
-	namespace eval ::N3Class {
-	    oo::class create C1
-	    oo::define C1 method m1 {msgcat::mcpackagenamespaceget}
-	}
-
-	# The class object may be used in another namespace
-
-	namespace eval ::N3Obj {
-	    set O1 [::N3Class::C1 new]
-	}
-
-	% $N3Obj::O1 m1
-	-> ::N3Class
-	</pre>
-
-4. Fourth use case: The package implementation is done by a classless object
-
-	<pre>
-	namespace eval ::N4 {
-	    oo::object create O1
-	    oo::objdefine O1 method m1 {} {msgcat::mcpackagenamespaceget}
-	}
-
-	% N4::O1 m1
-	-> ::N4
-	</pre>
-
-### Manually overwriting the package namespace by namespace eval
-
-As stated in the introduction, current OO code might have used an explicit `namespace eval packagenamespace` to make msgcat work. This should still be supported:
-
-<pre>
-namespace eval ::N4 {
-    oo::object create O1
-    oo::objdefine O1 method m1 {} {
-        namespace eval ::N5 { msgcat::mcpackagenamespaceget}
-    }
-}
-
-% N4::O1 m1
--> ::N5
-</pre>
-
-Note that in most real cases, one will explicitly specify "`::N4`" instead "`::N5`", as this is the package namespace.
-"`::N5`" was chosen in the example to show the fact, that the `namespace eval` overrides any class-magic.
-
-## Option 3: new command to get a translation with a package namespace as argument
+## Extension 3: new command to get a translation with a package namespace as argument
 
 A new command is proposed to get a translation with an explicit namespace:
+
 <pre>
 mcn ns src args...
 </pre>
+
 with the arguments:
+
 * ns: package namespace to do the translation for
 * src: the translation source string (like mc command)
 * args: eventual arguments to contained format patterns (like mc command)
@@ -304,7 +236,7 @@ proc ::tooltip::show {widget messagenamespace message} {
 </pre>
 
 
-## Option 4: Command "mcexists" should get a parameter -namespace to explicitly specify the namespace
+## Extension 4: Command "mcexists" should get a parameter -namespace to explicitly specify the namespace
 
 The command `mcexists` has currently the syntax:
 
