Record vote results from 2017-03-11 ballot

--- a/tip/490.md
+++ b/tip/490.md
@@ -1,8 +1,8 @@
 # TIP 490: msgcat for TclOO
 	Author:         Harald Oehlmann <oehhar@sourceforge.com>
-	State:          Voting
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        07-Dec-2017
 	Post-History:
 	Keywords:       msgcat, oo
