--- a/tip/198.md
+++ b/tip/198.md
@@ -2,9 +2,9 @@
 	Author:         R. Timothy Edwards <tim@stravinsky.jhuapl.edu>
 	Author:         Don Porter <dgp@users.sf.net>
 	Author:         Kevin Kenny <kennykb@acm.org>
-	State:          Voting
+	State:          Rejected
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        12-May-2004
 	Post-History:   
 	Tcl-Version:    8.7
