--- a/tip/462.md
+++ b/tip/462.md
@@ -1,8 +1,8 @@
 # TIP 462: Add New [::tcl::process] Ensemble for Subprocess Management
 	Author:         Frédéric Bonnet <fredericbonnet@free.fr>
-	State:          Voting
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        23-Jan-2017
 	Post-History:   
 	Tcl-Version:    8.7
