Completed TIP 503 vote. YES	Porter, Landers, Fellows, Kenny, Kupries Partial YES	Nijtmans Partial PRESENT	Nijtmans

--- a/tip/503.md
+++ b/tip/503.md
@@ -1,8 +1,8 @@
 # TIP 503: End Tcl 8.3 Source Compatibility Support
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           Pending
+	Vote:           Done
 	Created:        05-Feb-2018
 	Post-History:   
 	Tcl-Version:	8.7
