IMplementation now on the branch.

--- a/tip/505.md
+++ b/tip/505.md
@@ -108,8 +108,7 @@ normally accept as an expansion of useful functionality.
 
 # Implementation
 
-Is easy to do, but not yet on any branch. Watch for a tip-505 branch
-to provide it.
+On the tip-505 branch.
 
 # Copyright
 
