Complete draft of TIP 502.

--- a/tip/502.md
+++ b/tip/502.md
@@ -20,7 +20,7 @@ Many Tcl programmers may be surprised by this result
 	b
 
 This is the consequence of two features of incumbent Tcl
-functionality. First, passing the value "-4294967295" to
+functionality. First, passing the value *-4294967295* to
 _Tcl\_GetInt\(FromObj\)_ results in a successful extraction
 of the C __int__ value __1__. Generally any supported formatting
 of any value between __-UINT\_MAX__ and __UINT\_MAX__ is accepted,
@@ -41,14 +41,43 @@ Another source of possible surprise is demonstrated:
 	% lindex {a b} 4294967296
 	bad index "4294967296": must be integer?[+-]integer? or end?[+-]integer?
 
+These examples illustrate overflow effects in index arithmetic, and a
+rejection of apparently valid integer values that are larger than
+UINT_MAX. Neither of these effects is in agreement with handling of
+integers by **expr** which makes the results surprising.
 
 # Proposal
 
+Revise the parsing of values used as index values to accept all
+integer representations acceptable to **expr** as either complete
+index values or as operands in the end-offset or index arithmetic
+formats.
+
+Although this suggests an unlimited range of valid index values,
+in practice all index values will be truncated to the signed wide
+integer range, __LLONG\_MIN__ to __LLONG\_MAX__, internally, and
+in the Tcl 8 series of releases, further truncated to the signed
+int range, __INT\_MIN__ to __INT\_MAX__, since no container can
+be larger than that range in Tcl 8.
+
 # Compatibility
+
+Examples like the ones in the Background above will incompatibly
+change from one successful outcome to a different successful outcome.
+This is a true incompatibility, but it is difficult to believe any
+actually desires outlier behaviors illustrated above, much less has
+code that relies on them.
 
 # Implementation
 
-Taking shape on the tip-502 branch.
+Drafted on the tip-502 branch.
+
+Note that the core routine of the implementation, _GetWideForIndex_,
+produces a *Tcl_WideInt* result from a successful parse. I expect
+this functionality will be useful in the Tcl 9 codebase as an enabling
+step for containers with sizes larger than __INT\_MAX__. The existing
+internal routine _TclGetIntForIndex_ continues to produce the more
+limited range suitable for Tcl 8.
 
 # Copyright
 
