--- a/tip/502.md
+++ b/tip/502.md
@@ -20,7 +20,7 @@ Many Tcl programmers may be surprised by this result
 	b
 
 This is the consequence of two features of incumbent Tcl
-functionality. First, passing the value *-4294967295* to
+functionality. First, passing the value **-4294967295** to
 _Tcl\_GetInt\(FromObj\)_ results in a successful extraction
 of the C __int__ value __1__. Generally any supported formatting
 of any value between __-UINT\_MAX__ and __UINT\_MAX__ is accepted,
@@ -43,7 +43,7 @@ Another source of possible surprise is demonstrated:
 
 These examples illustrate overflow effects in index arithmetic, and a
 rejection of apparently valid integer values that are larger than
-UINT_MAX. Neither of these effects is in agreement with handling of
+__UINT\_MAX__. Neither of these effects is in agreement with handling of
 integers by **expr** which makes the results surprising.
 
 # Proposal
@@ -54,8 +54,8 @@ index values or as operands in the end-offset or index arithmetic
 formats.
 
 Although this suggests an unlimited range of valid index values,
-in practice all index values will be truncated to the signed wide
-integer range, __LLONG\_MIN__ to __LLONG\_MAX__, internally, and
+in practice all index values will be truncated internally to the
+signed wide integer range, __LLONG\_MIN__ to __LLONG\_MAX__, and
 in the Tcl 8 series of releases, further truncated to the signed
 int range, __INT\_MIN__ to __INT\_MAX__, since no container can
 be larger than that range in Tcl 8.
@@ -64,8 +64,8 @@ be larger than that range in Tcl 8.
 
 Examples like the ones in the Background above will incompatibly
 change from one successful outcome to a different successful outcome.
-This is a true incompatibility, but it is difficult to believe any
-actually desires outlier behaviors illustrated above, much less has
+This is a true incompatibility, but it is difficult to believe anyone
+actually desires the outlier behaviors illustrated above, much less has
 code that relies on them.
 
 # Implementation
