Explain why some TIP #389 proposed changes are upwards compatible. Remove description of Tcl_WinUtfToTChar/Tcl_WinTCharToUtf (implementation-only) change.

--- a/tip/389.md
+++ b/tip/389.md
@@ -68,6 +68,19 @@ This document proposes:
 
 	 > \* _Tcl\_GetUniChar_
 
+	At first sight, this looks like a binary incompatibility, but in fact this
+	is upwards compatible. Since in C, function calls generally transfer the
+	result of a function call in a special register (the Accumulator). When
+	compiling an extension using Tcl 8.6 headers, the caller expects the
+	accumulator to contain a 16-bit result, while the remaining 48 bits (the
+	Accumulator generally is 64-bit) are undefined. When the extension is
+	run under Tcl 8.7, 16 more bits of the accumulator content are now defined
+	(generally all zero's). The effect is that all characters >= **U\+010000**
+	(which are not supported on Tcl 8.6) are now mapped to characters in the first
+	unicode plane, but that's all. Re-compiling the extension using Tcl 8.7 headers
+	might enable full Unicode support for the extension, if a 32-bit register is used
+	to store the result.
+
  * Extend tclUniData.c to include all Unicode 10.0 characters up to
    **U\+02FA20**.  A special case will be made for the functions
    _Tcl\_UniCharIsGraph_ and _Tcl\_UniCharIsPrint_ for the characters in the
@@ -88,13 +101,6 @@ This document proposes:
    compiled with this same options no longer being loadable in normal
    Tcl and reverse. Note that TCL\_UTF\_MAX=6 compiles are still not officially
    supported, a lot of additional fixes are needed to make it work right.
-
- * Change the Windows-only functions Tcl\_WinTchar2Utf and Tcl\_WinUtf2TChar
-   to using only the Win32 API functions in its implementation. This means
-   that the Tcl encoding system no longer needs to be initialized in
-   order for those functions to work. (This cannot be done with TCL\_UTF\_MAX=3,
-   because the Windows API might produce 4-byte UTF-8 sequences, which Tcl
-   cannot handle then)
 
 # Compatibility
 
@@ -155,8 +161,9 @@ split it in two separate characters that won't work: It will then be split
 in a character with length 2 (the original one) and another character with
 length 0 (the empty string).
 
-Also note that the regexp engine still cannot handle Unicode characters >U+FFFF,
-this engine will handle those as if they consist of 2 separate characters.
+Also note that the regexp engine still cannot really handle Unicode characters >U+FFFF,
+it will handle those as if they consist of 2 separate characters. Most usage of
+regular expressions won't notice the difference.
 
 Those caveats are planned to be handled in "part 2" (TIP #497)
 
